[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.32"
anyhow = "1.0.62"
clap = { version = "4.1.6", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.11.3"
network_bridge = "0.1.1"
network-interface = "1.0.0"
cidr = "0.2.1"
rand = "0.8.4"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "full",
] }
tonic = { version = "0.11.0", features = ["transport"] }
prost = "0.12.1"
async-trait = "0.1.74"
mockall = "0.12.1"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "time", "env-filter"] }
tracing = { version = "0.1.40" }
# log = "0.4.14"
firepilot = "1.2.0"
tokio-tun = "0.11.4"
iptables = "0.5.1"
futures = "0.3.30"
default-net = "0.22.0"
reqwest = { version = "0.12.4", features = ["stream"] }

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
